--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="card">
@@ -19,7 +21,7 @@
         <div class="weather">
             <h2 class="city">Weather in Denver</h2>
         <div class="temp">51°C</div> 
-        <img src="" alt="" class="icon"/> 
+        <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon"/> 
         <div class="description">Cloudy</div> 
         <div class="humidity">Humidity: 60%</div>
         <div class="wind">Wind speed: 6.2km/h</div>
